infra/k8s/auth-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: docentcafedry/auth
---
apiVersion: v1
kind: Service
metadata:
  name: auth-serv
spec:
  type: ClusterIP
  selector:
    app: auth
  ports:
    - port: 4000
      targetPort: 4000
