infra/k8s/redis-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-dep
spec:
  selector:
    matchLabels:
      app: redis-app
  template:
    metadata:
      labels:
        app: redis-app
    spec:
      containers:
        - name: redis-app
          image: redis
---
apiVersion: v1
kind: Service
metadata:
  name: redis-serv
spec:
  selector:
    app: redis-app
  ports:
    - port: 6379
      targetPort: 6379
