infra/k8s/tickets.depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-depl
spec:
  selector:
    matchLabels:
      app: tickets
  template:
    metadata:
      labels:
        app: tickets
    spec:
      containers:
        - name: tickets
          image: docentcafedry/tickets
---
apiVersion: v1
kind: Service
metadata:
  name: tickets-serv
spec:
  selector:
    app: tickets
  ports:
    - port: 4000
      targetPort: 4000
