infra/k8s/ingress-serv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: tickings.dev
      http:
        paths:
          - pathType: Prefix
            path: "/auth/user/currentuser"
            backend:
              service:
                name: auth-serv
                port:
                  number: 4000
          - pathType: Prefix
            path: "/auth/signup"
            backend:
              service:
                name: auth-serv
                port:
                  number: 4000
          - pathType: Prefix
            path: "/auth/signin"
            backend:
              service:
                name: auth-serv
                port:
                  number: 4000
          - pathType: Prefix
            path: "/auth/logout"
            backend:
              service:
                name: auth-serv
                port:
                  number: 4000
          - pathType: ImplementationSpecific
            path: "/api/tickets/(.*)"
            backend:
              service:
                name: tickets-serv
                port:
                  number: 4000
          - pathType: ImplementationSpecific
            path: "/api/tickets/update/(.*)"
            backend:
              service:
                name: tickets-serv
                port:
                  number: 4000
          - pathType: Prefix
            path: "/api/tickets"
            backend:
              service:
                name: tickets-serv
                port:
                  number: 4000
          - pathType: Prefix
            path: "/tickets"
            backend:
              service:
                name: tickets-serv
                port:
                  number: 4000
          - pathType: ImplementationSpecific
            path: "/(.*)"
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
